k8s/simple-web/overlays/pve/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-web
  annotations:
    cert-manager.io/cluster-issuer: spnw-intermediate-ca1-issuer
    cert-manager.io/common-name: "simple-web.world1l.worldl.xpt"
spec:
  ingressClassName: nginx
  rules:
    - host: simple-web.vm.pve.worldl.xpt
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-web
                port:
                  number: 80
    - host: pve-simple-web.worldb.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-web
                port:
                  number: 80
  tls:
    - hosts:
        - simple-web.vm.pve.worldl.xpt
      secretName: simple-web-cert-secret
